# discogser

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  catalog.py  config.py  discogs.py  ledger.py  main.py  matching.py  pyproject.toml  requirements-dev.txt  requirements.txt  selftest.py  ui.py  vision.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  release.yml
discogser/: __init__.py  __main__.py  cli.py  config.py  discogs.py  doctor.py  ledger.py  matching.py  pipeline.py  ui.py  vision.py  web.py
docs/: council.md  evidence.md  plan.md  scorecard.md
tests/: conftest.py  helpers.py  test_cataloguer.py  test_config.py  test_discogs.py  test_doctor.py  test_grouping.py  test_ledger.py  test_matching.py  test_reports.py  test_resolver.py  test_security.py  test_vision_prep.py  test_web.py
